--- a/ui.apps/src/main/content/jcr_root/apps/carproject/components/tklistcar/tklistcar.html
+++ b/ui.apps/src/main/content/jcr_root/apps/carproject/components/tklistcar/tklistcar.html
@@ -7,7 +7,7 @@
             </div>
             <div>
                 <p>${item.description} </p>
-                <p>Model: ${item.model} </p>
+                <p>Car model: ${item.model} </p>
                 <p>Km: ${item.km} </p>
                 <p>Year: ${item.year} </p>
             </div>
